--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rm -rf lib",
-    "build": "webpack",
+    "build": "rollem",
     "postbuild": "node scripts/write-component-entry"
   },
   "dependencies": {},
@@ -14,13 +14,10 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "modular-css": "^0.29.1",
     "react": "^15.4.1",
-    "style-loader": "^0.13.1",
-    "webpack": "2.2.0-rc.1"
+    "rollem": "^1.8.1",
+    "rollup": "^0.37.0",
+    "rollup-plugin-babel": "^2.7.1"
   }
 }
